--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -174,38 +174,31 @@
                 var rowCount = 0;
                 for (var i = 0; i < ths.liga.length; i++) {
 
-                    var row = table.insertRow(rowCount);
-                    row.setAttribute("class", "UnHighLight");
-                    row.setAttribute("onMouseOver", "HighLight(this)");
-                    row.setAttribute("onMouseOut", "UnHighLight(this)");
-                    row.setAttribute("onclick", 'Select(this)');
-                    row.setAttribute("ondblclick", 'mapaJs.contacto(' + ths.liga[i].id + ')');
+                    var $row = $("<tr class='UnHighLight'"
+                            + " onMouseOver='HighLight(this)'"
+                            + " onMouseOut='UnHighLight(this)'"
+                            + " onclick='Select(this)'"
+                            + " ondblclick='mapaJs.contacto('" + ths.liga[i].id + "')'>").appendTo(table);
+
                     if (ths.liga[i].username === global.perfil.username) {
-                        $(row).css("color", "gold");
+                        $row.css("color", "gold");
                     }
 
-                    var cell = row.insertCell(0);
-                    var div = $("<div>");
-                    $(cell).append(div);
-                    $(cell).attr('pos', ths.liga[i].posicion);
-                    $(div).html(ths.liga[i].posicion);
+                    var pos = $("<td pos='" + ths.liga[i].posicion + "'>").appendTo($row);
+                    $("<div>" + ths.liga[i].posicion + "</div>").appendTo(pos);
 
-                    var cell = row.insertCell(1);
-                    $(cell).css("font-weight", "bold");
-                    $(cell).html("<div>" + ths.liga[i].username + "<div>");
-
-                    var cell2 = row.insertCell(2);
-
-                    var cell3 = row.insertCell(3);
-                    $(cell3).css("font-weight", "bold");
+                    $("<td style='font-weight:bold'>" + ths.liga[i].username + "<div>").appendTo($row);
+                    
+                    var $p1 = $("<td>").appendTo($row);
+                    var $p2 = $("<td>").appendTo($row);
 
                     var puntos = ths.liga[i].puntos;
                     if (typeof puntos !== 'undefined') {
-                        $(cell2).html("<div>" + puntos.split(",")[1] + "</div>");
-                        $(cell3).html("<div>" + puntos.split(",")[0] + "</div>");
+                        $p1.html("<div>" + puntos.split(",")[1] + "</div>");
+                        $p2.html("<div>" + puntos.split(",")[0] + "</div>");
                     } else {
-                        $(cell2).html("<div>0-0</div>");
-                        $(cell3).html("<div>0</div>");
+                        $p1.html("<div>0-0</div>");
+                        $p2.html("<div>0</div>");
                     }
 
                     rowCount++;
@@ -452,7 +445,7 @@
                 var division = divisionMostrar + parseInt($("#subdivisionMapa").val());
                 global.division = division;
                 ajax.getLiga(division, function (liga) {
-                    if(!liga){
+                    if (!liga) {
                         alert("la división seleccionada no existe");
                         return;
                     }
