--- a/pages/mapa_mob.html
+++ b/pages/mapa_mob.html
@@ -32,7 +32,7 @@
         <tr>
             <td style="vertical-align:top">
                 <div class="cuerpo tabla">
-                    <table class="subtitulo">
+                    <table id="tablaLiga" class="subtitulo">
                         <thead class="thead">
                             <tr>
                                 <th id="ordenar" class="pos">
@@ -49,7 +49,7 @@
                                 </th>
                             </tr>
                         </thead>
-                        <tbody id="tablaLiga" class="tbody">
+                        <tbody class="tbody">
                             <!-- -->
                         </tbody>
                     </table>
