--- a/pages/mapa_mob.html
+++ b/pages/mapa_mob.html
@@ -151,8 +151,9 @@
                     var $row = $("<tr class='UnHighLight'"
                             + " onclick='Select(this)'"
                             + " ondblclick='contacto('" + ths.liga[i].id + "')'>").appendTo(table);
-
-                    $("<td style='text-align:right' pos='" + ths.liga[i].posicion + "'>" + ths.liga[i].posicion + "</td>").appendTo($row);
+                    
+                    var pos = ths.liga[i].posicion;
+                    $("<td style='text-align:right' pos='" + pos + "'>" + pos + "</td>").appendTo($row);
                     $("<td style='text-align:center'>" + ths.liga[i].username + "</td>").appendTo($row);
 
                     var p1 = $("<td>").appendTo($row);
