--- a/pages/equipo_mob.html
+++ b/pages/equipo_mob.html
@@ -87,7 +87,7 @@
                                             <td>Valor</td>
                                             <td style="text-align: right;">
                                                 <span id="valor"></span>
-                                                <span class="minBoton" style="font-size:12px; padding: 0 .4em;" onclick="equipoJs.botonVender();">Vender</span>
+                                                <span class="minBoton" style="font-size:12px; padding: 0 .4em;" onclick="equipoJs.botonVender(this);">Vender</span>
                                             </td>
                                         </tr>
                                     </tbody>
