--- a/pages/construccion.html
+++ b/pages/construccion.html
@@ -357,7 +357,7 @@
             if (oro >= precio) {
                 $.ajax({
                     type: "GET",
-                    url: "ampliar",
+                    url: url + "ampliar",
                     data: {
                         edificio: edificio
                     },
