--- a/pages/contactoResumen.html
+++ b/pages/contactoResumen.html
@@ -116,7 +116,7 @@
                                 }
                                 $.ajax({
                                     type: "GET",
-                                    url: "enviarPrivado",
+                                    url: url + "enviarPrivado",
                                     data: {
                                         asunto: asunto,
                                         mensaje: mensaje,
