--- a/pages/contactoTraspasos.html
+++ b/pages/contactoTraspasos.html
@@ -36,7 +36,7 @@
         getTraspasosContacto: function() {
             $.ajax({
                 type: "GET",
-                url: "getTraspasos",
+                url: url + "getTraspasos",
                 data: {
                     id: global.perfilContacto.id
                 },
