--- a/pages/batallas_mob.html
+++ b/pages/batallas_mob.html
@@ -435,7 +435,7 @@
                 var string = razaClase(raza, clase); //use for repair
 
                 $.ajax({
-                    url: '../img/sprites/' + string + '.js',
+                    url: url + '../img/sprites/' + string + '.js',
                     async: false,
                     dataType: "script"
                 });
