--- a/pages/equipo_mob.html
+++ b/pages/equipo_mob.html
@@ -34,7 +34,7 @@
 </div>
 
 <table>
-    <td id="detalleCriatura" class="bloque contenedor" colspan="99" style="width:100%; overflow:hidden !important">
+    <td id="detalleCriatura_base" class="bloque contenedor" colspan="99" style="width:100%; overflow:hidden !important">
         <div class="none" style="width:100%"><!--importante en movil-->
             <div class="titulo">
                 <span id="nombre"></span>
