--- a/pages/alineacion_mob.html
+++ b/pages/alineacion_mob.html
@@ -3,8 +3,8 @@
     <div class="titulo">
         ALINEACIÓN
     </div>
-    <div>
-        <canvas id="canvasAlineacion"></canvas>
+    <div style='text-align: center;'>
+        <canvas id="canvasAlineacion" style='top: 3px;'></canvas>
     </div>
 </div>
 
@@ -155,7 +155,7 @@
                 $(this).removeClass("swipRight");
                 alineacion.unSelect();
                 e.stopPropagation();
-            });
+            });            
         }
     };
 </script>
