--- a/pages/alineacion_mob.html
+++ b/pages/alineacion_mob.html
@@ -57,7 +57,7 @@
             </select>
         </div>
 
-        <p class="botones">
+        <p class="botones" style='margin-top:30px'>
             <span class="boton" id="asignarAlineacion" onclick="alineacion.asignarAlineacion()"><span>Guardar</span></span>
         </p>
     </div>
