--- a/pages/mapa_mob.html
+++ b/pages/mapa_mob.html
@@ -77,17 +77,17 @@
 </div>
 
 <div id="foro" class="contenedor">
-    <!--<div class="cuerpo">-->
-    <!--<div id="comentarios" class="scrollComentarios" style="width: 100%">-->
-    <div id="mensajes"></div>
-    <!--</div>-->
-    <div id="textarea">
-        <div>
-            <textarea id="mensaje" rows="1"></textarea>
-            <div id="mensajeBoton" onclick="mapaJs.enviarMensajePrensa();">></div>
+    <div class="cuerpo">
+        <!--<div id="comentarios" class="scrollComentarios" style="width: 100%">-->
+        <div id="mensajes"></div>
+        <!--</div>-->
+        <div id="textarea">
+            <div>
+                <textarea id="mensaje" rows="1"></textarea>
+                <div id="mensajeBoton" onclick="mapaJs.enviarMensajePrensa();">></div>
+            </div>
         </div>
     </div>
-    <!--</div>-->
 </div>
 
 <div id="listaBatallas" class="pageRight">
