--- a/pages/mapa_mob.html
+++ b/pages/mapa_mob.html
@@ -29,6 +29,10 @@
         overflow-y: scroll;
         overflow-x: hidden;
     }
+    #mensajeBoton > div{
+        margin: 50%;
+        transform: translate(-50%, -50%);
+    }
 </style>
 
 <div id="division" class="contenedor">
@@ -84,7 +88,7 @@
     <div id="textarea">
         <div>
             <textarea id="mensaje" rows="1"></textarea>
-            <div id="mensajeBoton" onclick="mapaJs.enviarMensajePrensa();">></div>
+            <div id="mensajeBoton" onclick="mapaJs.enviarMensajePrensa();"><div>></div></div>
         </div>
     </div>
     <!--</div>-->
