--- a/pages/mapa_mob.html
+++ b/pages/mapa_mob.html
@@ -8,7 +8,8 @@
     }
     #foro{
         flex-grow: 1;
-        margin-top:5px
+        margin-top:5px;
+        overflow: hidden;
     }
     #foro #textarea{
         position: absolute;
@@ -25,7 +26,7 @@
         right: 0;
         left: 0;
         top: 1px;
-        bottom: 25px;
+        bottom: 36px;
         overflow-y: scroll;
         overflow-x: hidden;
     }
@@ -87,8 +88,8 @@
     <!--</div>-->
     <div id="textarea">
         <div>
-            <textarea id="mensaje" rows="1"></textarea>
-            <div id="mensajeBoton" onclick="mapaJs.enviarMensajePrensa();"><div>></div></div>
+            <textarea id="mensaje" rows="1" style='height:30px'></textarea>
+            <div id="mensajeBoton" onclick="mapaJs.enviarMensajePrensa();" style='line-height: 30px'>></div>
         </div>
     </div>
     <!--</div>-->
