--- a/pages/mapa_mob.html
+++ b/pages/mapa_mob.html
@@ -86,9 +86,9 @@
     <!--<div id="comentarios" class="scrollComentarios" style="width: 100%">-->
     <div id="mensajes" style='padding: 0 5px;'></div>
     <!--</div>-->
-    <div id="textarea">
+    <div id="textarea" style='left:3px; right:3px'>
         <div>
-            <textarea id="mensaje" rows="1" style='height:30px'></textarea>
+            <textarea id="mensaje" rows="1" style='min-height:30px'></textarea>
             <div id="mensajeBoton" onclick="mapaJs.enviarMensajePrensa();" style='line-height: 30px'>></div>
         </div>
     </div>
