--- a/pages/academia_mob.html
+++ b/pages/academia_mob.html
@@ -39,7 +39,7 @@
             <div class="none" style="width:100%"><!--importante en movil-->
                 <div class="titulo">
                     <span id="nombre"></span>
-                    <div onclick="botonExpulsar();" class="minBoton" style="float:right;">
+                    <div onclick="academiaEquipoJs.botonExpulsar();" class="minBoton" style="float:right;">
                         <span>Expulsar</span>
                     </div>
                 </div>
