--- a/pages/login.html
+++ b/pages/login.html
@@ -1,4 +1,6 @@
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <div id="conjunto" style="position:relative">
     <div id="tituloIndex" style="height:20%"></div>
 
