--- a/pages/loadIndex_mob.html
+++ b/pages/loadIndex_mob.html
@@ -139,7 +139,7 @@
         "contacto": "pages/contacto_mob.html",
         "entreno": "pages/entreno_mob.html",
         "equipo": "pages/equipo_mob.html",
-        "estadisticas": "pages/estadisticas.html",
+        "estadisticas": "pages/estadisticas_mob.html",
         "mapa": "pages/mapa_mob.html",
         "mazmorras": "pages/mazmorras_mob.html",
         "mensajes": "pages/mensajes_mob.html",
