--- a/pages/contacto_mob.html
+++ b/pages/contacto_mob.html
@@ -64,7 +64,7 @@
                         type: "GET",
                         url: url + "getTrofeos",
                         data: {
-                            id: contactoId
+                            id: global.contactoId
                         },
                         success: function(response) {
                             if ("" !== response) {
