--- a/pages/contacto_mob.html
+++ b/pages/contacto_mob.html
@@ -109,6 +109,7 @@
             }
         },
         pestanaContacto: function (pest) {
+            console.log("pestanaContacto() " + pest);
             //contactoCargar(pest);
             cargar(pest, "#contenidosContacto");
             
