--- a/pages/loadIndex_mob.html
+++ b/pages/loadIndex_mob.html
@@ -144,14 +144,14 @@
         "mazmorras": "pages/mazmorras_mob.html",
         "mensajes": "pages/mensajes_mob.html",
         "perfil": "pages/perfil.html",
-        "academiaAlineacion": "pages/academia/academiaAlineacion.html",
-        "academiaEquipo": "pages/academia/academiaEquipo.html",
-        "contactoCalendario": "pages/contacto/contactoCalendario.html",
-        "contactoEquipo": "pages/contacto/contactoEquipo.html",
-        "contactoResumen": "pages/contacto/contactoResumen.html",
-        "contactoTraspasos": "pages/contacto/contactoTraspasos.html",
-        "perfilDatos": "pages/perfil/perfilDatos.html",
-        "perfilEconomia": "pages/perfil/perfilEconomia.html"
+        "academiaAlineacion": "pages/academiaAlineacion.html",
+        "academiaEquipo": "pages/academiaEquipo.html",
+        "contactoCalendario": "pages/contactoCalendario.html",
+        "contactoEquipo": "pages/contactoEquipo.html",
+        "contactoResumen": "pages/contactoResumen.html",
+        "contactoTraspasos": "pages/contactoTraspasos.html",
+        "perfilDatos": "pages/perfilDatos.html",
+        "perfilEconomia": "pages/perfilEconomia.html"
     };
 
     require.config({
