--- a/pages/contactoResumen.html
+++ b/pages/contactoResumen.html
@@ -77,7 +77,7 @@
                                 $(".nombreContacto").text(perfilContacto.nombreId);
                                 $("#ranking").text(perfilContacto.posicion);
 
-                                var liga = perfilContacto.division.division;
+                                var liga = perfilContacto.div;
                                 var division = 0;
                                 var resultado = 0;
                                 var siguiente = true;
