--- a/pages/contactoTraspasos.html
+++ b/pages/contactoTraspasos.html
@@ -51,7 +51,7 @@
         },
         mostrarTraspasos: function() {
             var obj = global.obj_traspasosContacto;
-            this.getTraspasos(function() {
+            this.getTraspasosContacto(function() {
 
                 var table = document.getElementById("table1").getElementsByTagName("tbody")[0];
                 var rowCount = table.rows.length;
