--- a/pages/loadIndex_mob.html
+++ b/pages/loadIndex_mob.html
@@ -370,12 +370,12 @@
                     petAjax[i].abort();
                 }
             });
-            $("#iconoMensajes").on("click", function () {
-                cargar("mensajes");
-            });
-            $("#iconoEstadisticas").on("click", function () {
-                cargar('estadisticas');
-            });
+//            $("#iconoMensajes").on("click", function () {
+//                cargar("mensajes");
+//            });
+//            $("#iconoEstadisticas").on("click", function () {
+//                cargar('estadisticas');
+//            });
             $("#iconoMapa").on("click", function () {
                 cargar('mapa');
             });
